...
            modifier = Modifier.size(200.dp)
        )
        Spacer(modifier = Modifier.height(16.dp))
        TextField(
            value = email,
            onValueChange = { email = it },
            label = { Text("Correo electrónico") }
        )
        Spacer(modifier = Modifier.height(8.dp))
        TextField(
            value = password,
            onValueChange = { password = it },
            label = { Text("Contraseña") },
            visualTransformation = if (passwordVisible) VisualTransformation.None else PasswordVisualTransformation(),
            trailingIcon = {
                val icon = if (passwordVisible) "Ocultar" else "Mostrar"
                TextButton(onClick = { passwordVisible = !passwordVisible }) { Text(icon) }
            }
        )
...
                            }
                            if (foundUser != null) {
                                errorMessage = ""
                                currentUser = foundUser.email
                                navController.navigate("home")
                            } else {
                                errorMessage = "Credenciales incorrectas"
                            }
                        } else {
                            errorMessage = "Credenciales incorrectas"
                        }
                    }
                    override fun onCancelled(error: DatabaseError) {
                        errorMessage = error.message
                    }
                })
        }) {
            Text("Iniciar Sesión")
        }
        TextButton(onClick = { navController.navigate("recuperar_contrasena") }) {
            Text("¿Olvidaste tu contraseña?")
        }
        TextButton(onClick = { navController.navigate("registro") }) {
            Text("Registrarse")
        }
        Spacer(modifier = Modifier.height(16.dp))
        Text(text = "Versión 1.0", color = Color.Gray)
    }
}

...
